libs/@local/hashql/eval/tests/ui/graph/read/entity/field-in-dict-value.jsonc
//@ run: fail
//@ description: Paths inside data constructs are unsupported
// biome-ignore format: readability
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        ["[]", {"#dict": {"a": "vertex.id.entity_id.entity_uuid"}}, {"#literal": "a"}],
        //~^ ERROR path expressions are not supported in data constructs
        "vertex.id.entity_id.entity_uuid"
      ]
    ]
  ]
]
